--- a/package.json
+++ b/package.json
@@ -1,18 +1,35 @@
 {
-  "name": "naledi.co.uk",
+  "name": "naledi",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "@tailwindcss/ui": "^0.1.3",
-    "live-server": "^1.2.1",
-    "tailwindcss": "^1.2.0"
-  },
+  "private": true,
   "scripts": {
-    "tailwind:build": "npx tailwind build styles.css -o public/output.css",
-    "serve": "npm run tailwind:build && live-server --port=3000 --open=./public",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
+    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "yarn lint:js"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "@nuxt/content": "^1.9.0",
+    "@nuxtjs/google-analytics": "^2.4.0",
+    "@tailwindcss/typography": "^0.3.1",
+    "core-js": "^3.6.5",
+    "date-fns": "^2.16.1",
+    "nuxt": "^2.14.6"
+  },
+  "devDependencies": {
+    "@nuxtjs/eslint-config": "^3.1.0",
+    "@nuxtjs/eslint-module": "^2.0.0",
+    "@nuxtjs/tailwindcss": "^3.1.0",
+    "autoprefixer": "^9",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-nuxt": "^1.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "postcss": "^7",
+    "prettier": "^2.1.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+  }
 }
