--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@tailwindcss/typography": "^0.3.1",
     "core-js": "^3.6.5",
     "date-fns": "^2.16.1",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "reading-time": "^1.2.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
