--- a/package.json
+++ b/package.json
@@ -11,26 +11,25 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
-    "@nuxt/content": "^1.9.0",
+    "@nuxt/content": "^1.15.1",
     "@nuxtjs/google-analytics": "^2.4.0",
-    "@tailwindcss/typography": "^0.3.1",
+    "@tailwindcss/typography": "^0.4.1",
     "core-js": "^3.6.5",
     "date-fns": "^2.16.1",
-    "nuxt": "^2.14.6",
+    "motion": "^10.4.0",
+    "nuxt": "^2.15.8",
     "reading-time": "^1.2.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
-    "@nuxtjs/tailwindcss": "^3.1.0",
+    "@nuxtjs/tailwindcss": "^4.2.1",
     "autoprefixer": "^9",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "postcss": "^7",
-    "prettier": "^2.1.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "prettier": "^2.1.2"
   }
 }
